--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <nav>
-            <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+            <ul class="site-nav">
+                <li><a href="./index.html" class="link current">Студія</a></li>
+                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -23,61 +23,62 @@
         </ul>
     </header>
     <main>
+        <!-- title -->
         <section>
-            <h1>Ефективні рішення для вашего бізнеса</h1>
-            <button type="button">Замовити послугу</button>
+            <h1 class="main-title">Ефективні рішення для вашего бізнеса</h1>
+            <button type="button" class="button">Замовити послугу</button>
         </section>
         <!-- specifics -->
-        <section>
-            <h2>Особливості</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Особливості</h2>
+            <ul class="specifics-list">
                 <li>
-                    <h3>Увага до деталей</h3>
+                    <h3 class="title">Увага до деталей</h3>
                     <p>Ідеологічні міркування, а також початок щоденної роботи над формуванням позиції.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальність</h3>
+                    <h3 class="title">Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.</p>
                 </li>
                 <li>
-                    <h3>Планування</h3>
+                    <h3 class="title">Планування</h3>
                     <p>Так само консультація з широким активом значно обумовлює.</p>
                 </li>
                 <li>
-                    <h3>Сучасні технології</h3>
+                    <h3 class="title">Сучасні технології</h3>
                     <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
         <!-- work -->
-        <section>
-            <h2>Чим ми займаємось</h2>
+        <section class="section">
+            <h2 class="section-title">Чим ми займаємось</h2>
             <img src="./images/box1.jpg" alt="ноутбук" width="370" height="294">
             <img src="./images/box2.jpg" alt="телефон" width="370" height="294">
             <img src="./images/box3.jpg" alt="планшет" width="370" height="294">
         </section>
         <!-- team -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="team-list">
                 <li>
                     <img src="./images/ihor.jpg" alt="дизайнер Ігор" width="270" height="260">
-                    <h3>Ігор Демьяненко</h3>
+                    <h3 class="title">Ігор Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/olha.jpg" alt="розробник Ольга" width="270" height="260">
-                    <h3>Ольга Репіна</h3>
+                    <h3 class="title">Ольга Репіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nik.jpg" alt="маркетолог Микола" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="title">Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/mike.jpg" alt="дизайнер Михайло" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="title">Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
