--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,12 @@
 <body>
     <!-- header -->
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <nav>
-            <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+            <ul class="site-nav">
+                <li><a href="./index.html" class="link">Студія</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+                <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -26,70 +26,70 @@
     <!-- main -->
 <main>
     <!-- filters -->
-    <ul>
+    <ul class="filter-list">
         <li>
-            <button type="button">Все</button>
+            <button type="button" class="filter">Все</button>
         </li>
         <li>
-            <button type="button">Веб-сайти</button>
+            <button type="button" class="filter">Веб-сайти</button>
         </li>
         <li>
-            <button type="button">Додатки</button>
+            <button type="button" class="filter">Додатки</button>
         </li>
         <li>
-            <button type="button">Дизайн</button>
+            <button type="button" class="filter">Дизайн</button>
         </li>
         <li>
-            <button type="button">Маркетинг</button>
+            <button type="button" class="filter">Маркетинг</button>
         </li>
     </ul>
-    <section>
+    <section class="section">
         <!-- products -->
         <h1>Продукти</h1>
         <ul>
             <li>
                 <img src="./images/1.jpg" alt="ноутбук" width="370" height="294">
-                <h2>Технокряк</h2>
+                <h2 class="section-title">Технокряк</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/2.jpg" alt="два баскетболісти" width="370" height="294">
-                <h2>Постер New Orlean vs Golden Star</h2>
+                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/3.jpg" alt="логотип Ресторан Seafood" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
+                <h2 class="section-title">Ресторан Seafood</h2>
                 <p>Додаток</p>
             </li>
             <li>
                 <img src="./images/4.jpg" alt="навушники" width="370" height="294">
-                <h2>Проект Prime</h2>
+                <h2 class="section-title">Проект Prime</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
                 <img src="./images/5.jpg" alt="дві коробки" width="370" height="294">
-                <h2>Проект Boxes</h2>
+                <h2 class="section-title">Проект Boxes</h2>
                 <p>Додоток</p>
             </li>
             <li>
                 <img src="./images/6.jpg" alt="комп'ютер" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
+                <h2 class="section-title">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/7.jpg" alt="журнал" width="370" height="294">
-                <h2>Видавництво Limited Edition</h2>
+                <h2 class="section-title">Видавництво Limited Edition</h2>
                 <p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/8.jpg" alt="етикетка" width="370" height="294">
-                <h2>Проект LAB</h2>
+                <h2 class="section-title">Проект LAB</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
                 <img src="./images/9.jpg" alt="ноутбук" width="370" height="294">
-                <h2>Growing Business</h2>
+                <h2 class="section-title">Growing Business</h2>
                 <p>Додаток</p>
             </li>
         </ul>
