--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -18,34 +20,34 @@
                 <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- main -->
 <main>
-    <!-- filters -->
-    <ul class="filter-list">
-        <li>
-            <button type="button" class="filter">Все</button>
-        </li>
-        <li>
-            <button type="button" class="filter">Веб-сайти</button>
-        </li>
-        <li>
-            <button type="button" class="filter">Додатки</button>
-        </li>
-        <li>
-            <button type="button" class="filter">Дизайн</button>
-        </li>
-        <li>
-            <button type="button" class="filter">Маркетинг</button>
-        </li>
-    </ul>
-    <section class="section">
+    <section>
+        <h1>Портфоліо</h1>
+        <!-- filters -->
+        <ul class="filter-list">
+            <li>
+                <button type="button" class="filter">Все</button>
+            </li>
+            <li>
+                <button type="button" class="filter">Веб-сайти</button>
+            </li>
+            <li>
+                <button type="button" class="filter">Додатки</button>
+            </li>
+            <li>
+                <button type="button" class="filter">Дизайн</button>
+            </li>
+            <li>
+                <button type="button" class="filter">Маркетинг</button>
+            </li>
+        </ul>
         <!-- products -->
-        <h1>Продукти</h1>
         <ul>
             <li>
                 <img src="./images/1.jpg" alt="ноутбук" width="370" height="294">
@@ -93,14 +95,13 @@
                 <p>Додаток</p>
             </li>
         </ul>
-    </section>
 </main>
     <!-- footer -->
     <footer>
         <a href="./index.html">WebStudio</a>
         <address>
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
