text color and font

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
                 <li><a href="./index.html" class="link current">Студія</a></li>
@@ -26,7 +26,7 @@
     </header>
     <main>
         <!-- title -->
-        <section>
+        <section class="main">
             <h1 class="main-title">Ефективні рішення для вашего бізнеса</h1>
             <button type="button" class="button">Замовити послугу</button>
         </section>
@@ -36,19 +36,19 @@
             <ul class="specifics-list">
                 <li>
                     <h3 class="title">Увага до деталей</h3>
-                    <p>Ідеологічні міркування, а також початок щоденної роботи над формуванням позиції.</p>
+                    <p class="text">Ідеологічні міркування, а також початок щоденної роботи над формуванням позиції.</p>
                 </li>
                 <li>
                     <h3 class="title">Пунктуальність</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.</p>
+                    <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.</p>
                 </li>
                 <li>
                     <h3 class="title">Планування</h3>
-                    <p>Так само консультація з широким активом значно обумовлює.</p>
+                    <p class="text">Так само консультація з широким активом значно обумовлює.</p>
                 </li>
                 <li>
                     <h3 class="title">Сучасні технології</h3>
-                    <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
+                    <p class="text">Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
@@ -66,22 +66,22 @@
                 <li>
                     <img src="./images/ihor.jpg" alt="дизайнер Ігор" width="270" height="260">
                     <h3 class="title">Ігор Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/olha.jpg" alt="розробник Ольга" width="270" height="260">
                     <h3 class="title">Ольга Репіна</h3>
-                    <p>Frontend Developer</p>
+                    <p class="text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nik.jpg" alt="маркетолог Микола" width="270" height="260">
                     <h3 class="title">Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/mike.jpg" alt="дизайнер Михайло" width="270" height="260">
                     <h3 class="title">Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
