--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <!-- header -->
     <header>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
                 <li><a href="./index.html" class="link">Студія</a></li>
@@ -48,51 +48,51 @@
             </li>
         </ul>
         <!-- products -->
-        <ul>
+        <ul class="products">
             <li>
                 <img src="./images/1.jpg" alt="ноутбук" width="370" height="294">
-                <h2 class="section-title">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="products-title">Технокряк</h2>
+                <p class="products-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/2.jpg" alt="два баскетболісти" width="370" height="294">
-                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="products-title">Постер New Orlean vs Golden Star</h2>
+                <p class="products-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/3.jpg" alt="логотип Ресторан Seafood" width="370" height="294">
-                <h2 class="section-title">Ресторан Seafood</h2>
-                <p>Додаток</p>
+                <h2 class="products-title">Ресторан Seafood</h2>
+                <p class="products-text">Додаток</p>
             </li>
             <li>
                 <img src="./images/4.jpg" alt="навушники" width="370" height="294">
-                <h2 class="section-title">Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="products-title">Проект Prime</h2>
+                <p class="products-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/5.jpg" alt="дві коробки" width="370" height="294">
-                <h2 class="section-title">Проект Boxes</h2>
-                <p>Додоток</p>
+                <h2 class="products-title">Проект Boxes</h2>
+                <p class="products-text">Додоток</p>
             </li>
             <li>
                 <img src="./images/6.jpg" alt="комп'ютер" width="370" height="294">
-                <h2 class="section-title">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="products-title">Inspiration has no Borders</h2>
+                <p class="products-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/7.jpg" alt="журнал" width="370" height="294">
-                <h2 class="section-title">Видавництво Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="products-title">Видавництво Limited Edition</h2>
+                <p class="products-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/8.jpg" alt="етикетка" width="370" height="294">
-                <h2 class="section-title">Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="products-title">Проект LAB</h2>
+                <p class="products-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/9.jpg" alt="ноутбук" width="370" height="294">
-                <h2 class="section-title">Growing Business</h2>
-                <p>Додаток</p>
+                <h2 class="products-title">Growing Business</h2>
+                <p class="products-text">Додаток</p>
             </li>
         </ul>
 </main>
