--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <!-- header -->
     <header>
-        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo-primary"><span class="accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
                 <li><a href="./index.html" class="link">Студія</a></li>
@@ -95,15 +95,16 @@
                 <p class="products-text">Додаток</p>
             </li>
         </ul>
+    </section>
 </main>
     <!-- footer -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer  class="page-footer">
+        <a href="./index.html" class="logo-secondary"><span class="accent">Web</span>Studio</a>
         <address>
             <ul>
-                <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
