--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" class="logo-primary"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="link logo-primary"><span class="accent">Web</span>Studio</a>
         <nav>
-            <ul class="site-nav">
+            <ul class="list site-nav">
                 <li><a href="./index.html" class="link current">Студія</a></li>
                 <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
                 <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="contact">
+        <ul class="list contact">
             <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <!-- title -->
-        <section class="main">
-            <h1 class="main-title">Ефективні рішення<br> для вашего бізнеса</h1>
+        <section class="hero">
+            <h1 class="hero-title">Ефективні рішення для вашего бізнеса</h1>
             <button type="button" class="button">Замовити послугу</button>
         </section>
         <!-- specifics -->
         <section class="section">
             <h2 class="section-title">Особливості</h2>
-            <ul class="specifics-list">
+            <ul class="list specifics-list">
                 <li>
                     <h3 class="title">Увага до деталей</h3>
                     <p class="text">Ідеологічні міркування, а також початок щоденної роботи над формуванням позиції.</p>
@@ -62,7 +62,7 @@
         <!-- team -->
         <section class="section">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="team-list">
+            <ul class="list team-list">
                 <li>
                     <img src="./images/ihor.jpg" alt="дизайнер Ігор" width="270" height="260">
                     <h3 class="title">Ігор Демьяненко</h3>
@@ -88,12 +88,12 @@
     </main>
     <!-- footer -->
     <footer class="page-footer">
-        <a href="./index.html" class="logo-secondary"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="link logo-secondary"><span class="accent">Web</span>Studio</a>
         <address>
-            <ul>
-                <li><a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
+            <ul class="list">
+                <li><a href="" class="link address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
