--- a/portfolio.html
+++ b/portfolio.html
@@ -12,15 +12,15 @@
 <body>
     <!-- header -->
     <header>
-        <a href="./index.html" class="logo-primary"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="link logo-primary"><span class="accent">Web</span>Studio</a>
         <nav>
-            <ul class="site-nav">
+            <ul class="list site-nav">
                 <li><a href="./index.html" class="link">Студія</a></li>
                 <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
                 <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="contact">
+        <ul class="list contact">
             <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
@@ -30,9 +30,9 @@
     <section>
         <h1>Портфоліо</h1>
         <!-- filters -->
-        <ul class="filter-list">
+        <ul class="list filter-list">
             <li>
-                <button type="button" class="filter">Все</button>
+                <button type="button" class="filter active">Все</button>
             </li>
             <li>
                 <button type="button" class="filter">Веб-сайти</button>
@@ -48,7 +48,7 @@
             </li>
         </ul>
         <!-- products -->
-        <ul class="products">
+        <ul class="list products">
             <li>
                 <img src="./images/1.jpg" alt="ноутбук" width="370" height="294">
                 <h2 class="products-title">Технокряк</h2>
@@ -99,12 +99,12 @@
 </main>
     <!-- footer -->
     <footer  class="page-footer">
-        <a href="./index.html" class="logo-secondary"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="link logo-secondary"><span class="accent">Web</span>Studio</a>
         <address>
             <ul>
-                <li><a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
+                <li><a href="" class="link address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
